--- a/ginas/ginas/ginas.html
+++ b/ginas/ginas/ginas.html
@@ -70,16 +70,13 @@
                 <div class="row">
                     <div class="col-sm-4">
 
-                        <div class="date">October 10, 2018</div>
-                        <h3> <code> G-SRS v2.3.1</code></h3>
+                        <div class="date">February 25, 2019</div>
+                        <h3> <code> G-SRS v2.3.3</code></h3>
                     </div>
                     <div class="col-sm-8">
                         <h4>CHANGELOG</h4>
                         <ul>
-                            <li> fixed issue of structures sometimes losing lychi information when cached</li>
-                            <li>  fixed inability to remove NA sugar</li>
-                            <li>   Bug fix for suggestions with white space getting listed multiple times...</li>
-
+                            <li> Added Molvec, which uses OCR to convert images into molfiles displayable by the structure editor. Users can now drag and drop or copy and paste images into the structure editor and have the structure automatically rendered....
                         </ul>
                     </div>
                 </div>
