added mitch ginasExcelTools
Former-commit-id: e2d91e295856fda525b5780ea5329243fe0716fa

--- a/ginas/release/release.html
+++ b/ginas/release/release.html
@@ -25,8 +25,20 @@
             </div>
         </div>
             <div class="row no-gutter">
+
                     <div class="col-md-3 col-md-push-9">
                         <div class = "row" bs-affix data-offset-top="50">
+                            <div class = "col-md-12 col-sm-6">
+                                <div class = "cell">
+                                    <h3>Other Software</h3>
+                                    <div>
+                                        <ul>
+                                            <li>  <a target="_self" href = "../downloads/GinasExcelTools.zip" download = "GinasExcelTools.zip">Ginas Excel Tools</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <br/>
                             <div class = "col-md-12 col-sm-6">
                                 <div class = "cell">
                                     <h3>Quick Links</h3>
@@ -48,6 +60,7 @@
                                     </div>
                                 </div>
                             </div>
+
                         </div>
                     </div>
 
