added mitch ginasExcelTools
Former-commit-id: 7c77370a33dbf59c5147232488d945477c45b298

--- a/ginas/release/release.html
+++ b/ginas/release/release.html
@@ -33,7 +33,7 @@
                                     <h3>Other Software</h3>
                                     <div>
                                         <ul>
-                                            <li>  <a target="_self" href = "../downloads/GinasExcelTools.zip" download = "GinasExcelTools.zip">Ginas Excel Tools</a></li>
+                                            <li>  <a target="_self" href = "./downloads/GinasExcelTools.zip" download = "GinasExcelTools.zip">Ginas Excel Tools</a></li>
                                         </ul>
                                     </div>
                                 </div>
