changed file name
Former-commit-id: 4ffe58faec130af2238f7251d18ddc898de22ceb

--- a/ginas/gsrs/release.html
+++ b/ginas/gsrs/release.html
@@ -304,7 +304,7 @@ db.default.connectionInitSql=${?db.default.initSQL}
                             <div class="col-md-7">
                                 4. Click
                                 <button class="btn btn-primary"><i class="fa fa-folder-open"></i> Browse</button>
-                                A dialogue will appear prompting you to choose the <code>.ginas</code>
+                                A dialogue will appear prompting you to choose the <code>.gsrs</code>
                                 file you want to upload.
                             </div>
                         </div>
