added public release links
Former-commit-id: 34498fb6fc2802847e7a15aa6aca13c50e69ee17

--- a/ginas/release/release.html
+++ b/ginas/release/release.html
@@ -30,10 +30,11 @@
                         <div class = "row" bs-affix data-offset-top="50">
                             <div class = "col-md-12 col-sm-6">
                                 <div class = "cell">
-                                    <h3>Other Software</h3>
+                                    <h3>Other Downloads</h3>
                                     <div>
                                         <ul>
                                             <li>  <a target="_self" href = "./downloads/GinasExcelTools.zip" download = "GinasExcelTools.zip">Ginas Excel Tools</a></li>
+                                            <li>  <a target="_self" href = "./gsrs/dump-public-2019-04-03.gsrs" download = "dump-public-2019-04-03.gsrs">Full Public Data Dump</a></li>
                                         </ul>
                                     </div>
                                 </div>
