added downloads for schema and dictionary
Former-commit-id: 1804cb2adeff21f1af703f5cab34d54e794a46fc

--- a/ginas/release/release.html
+++ b/ginas/release/release.html
@@ -35,6 +35,8 @@
                                         <ul>
                                             <li>  <a target="_self" href = "./downloads/GinasExcelTools.zip" download = "GinasExcelTools.zip">Ginas Excel Tools</a></li>
                                             <li>  <a target="_self" href = "./downloads/dump-public-2019-04-03.gsrs" download = "dump-public-2019-04-03.gsrs">Full Public Data Dump</a></li>
+                                            <li>  <a target="_self" href = "./downloads/GSRS_data_dictionary.xlsx" download = "GSRS_data_dictionary.xlsx">GSRS Data Dictionary</a></li>
+                                            <li>  <a target="_self" href = "./downloads/GSRS_schema.json" download = "GSRS_schema.json">GSRS JSON schema</a></li>
                                         </ul>
                                     </div>
                                 </div>
