--- a/ginas/ginas/ginas.html
+++ b/ginas/ginas/ginas.html
@@ -66,18 +66,17 @@
     </div>
     <div class = "row no-gutter">
         <div class = "col-md-8">
-            <div class =  "left-col cell">
-                <div class="row">
+            <div class =  "left-col cell" >
+                <div class="row" style = "height:145px">
                     <div class="col-sm-4">
 
-                        <div class="date">February 25, 2019</div>
-                        <h3> <code> G-SRS v2.3.3</code></h3>
+                        <div class="date">October 30, 2019</div>
+                        <h3> <code> G-SRS v2.4</code></h3>
                     </div>
                     <div class="col-sm-8">
-                        <h4>CHANGELOG</h4>
-                        <ul>
-                            <li> Added Molvec, which uses OCR to convert images into molfiles displayable by the structure editor. Users can now drag and drop or copy and paste images into the structure editor and have the structure automatically rendered....
-                        </ul>
+<br/><br/>
+                              <h4>The newest version of G-SRS is now available for download </h4>
+
                     </div>
                 </div>
                 <div class = "row">
