--- a/ginas/release/release.html
+++ b/ginas/release/release.html
@@ -35,8 +35,9 @@
                                         <ul>
                                             <li>  <a target="_self" href = "./downloads/GinasExcelTools.zip" download = "GinasExcelTools.zip">Ginas Excel Tools</a></li>
                                             <li>  <a target="_self" href = "./downloads/dump-public-2019-04-03.gsrs" download = "dump-public-2019-04-03.gsrs">Full Public Data Dump</a></li>
-                                            <li>  <a target="_self" href = "./downloads/GSRS_data_dictionary.xlsx" download = "GSRS_data_dictionary.xlsx">GSRS Data Dictionary</a></li>
-                                            <li>  <a target="_self" href = "./downloads/GSRS_schema.json" download = "GSRS_schema.json">GSRS JSON schema</a></li>
+                                            <li>  <a target="_self" href = "./downloads/GSRS_data_dictionary_10_10_19.xlsx" download = "GSRS_data_dictionary_10_30_19.xlsx">GSRS Data Dictionary (10/30/2019)</a></li>
+                                            <li>  <a target="_self" href = "./downloads/GSRS_schema_10_30_19.json" download = "GSRS_schema_10_30_19.json">GSRS JSON schema (10/30/2019)</a></li>
+                                            <li>  <a target="_self" href = "./downloads/Substance Registration - October 2019.docx" download = "Substance Registration - October 2019.docx">Substance Registration Guide Working Document</a></li>
                                         </ul>
                                     </div>
                                 </div>
